# infra/modules/openapi.yaml
@@ -22,31 +22,31 @@ paths:
                 - text
       responses:
         '200':
-          description: Task created successfully
+          description: successfully submitted for fact-checking
           content:
             application/json:
               schema:
                 type: object
                 properties:
-                  task_id:
+                  id:
                     type: string
-                    description: Unique task ID
+                    description: Unique state ID
       x-amazon-apigateway-integration:
         uri: arn:aws:apigateway:${aws_region_name}:lambda:path/2015-03-31/functions/${lambda_function_arn}/invocations
         passthroughBehavior: when_no_templates
         httpMethod: POST
         type: aws_proxy
 
-  /fact-check/{task_id}:
+  /fact-check/{id}:
     get:
-      summary: Retrieve the fact-checking result for a given task ID
+      summary: Retrieve the fact-checking result for a given state ID
       parameters:
         - in: path
-          name: task_id
+          name: id
           required: true
           schema:
             type: string
-          description: Unique task ID
+          description: Unique state ID
       responses:
         '200':
           description: Fact-checking result retrieved successfully
@@ -55,9 +55,9 @@ paths:
               schema:
                 type: object
                 properties:
-                  task_id:
+                  id:
                     type: string
-                    description: Unique task ID
+                    description: Unique state ID
                   result:
                     type: string
                     enum: [accurate, inaccurate, false, indeterminate]
